RESOLVED FIXED151385
[Cairo] SolidStroke broken in drawLine after r191658
https://bugs.webkit.org/show_bug.cgi?id=151385
Summary [Cairo] SolidStroke broken in drawLine after r191658
Alejandro G. Castro
Reported 2015-11-18 04:10:17 PST
The new method is not setting the color when the line is solid, at least 2 tests in mathml were broken, namely: mathml/presentation/fractions-color.html mathml/presentation/menclose-notation-attribute-set2.html
Attachments
Patch (1.62 KB, patch)
2015-11-18 04:15 PST, Alejandro G. Castro
no flags
Alejandro G. Castro
Comment 1 2015-11-18 04:15:41 PST
Carlos Garcia Campos
Comment 2 2015-11-18 04:19:34 PST
Comment on attachment 265743 [details] Patch Thanks!
WebKit Commit Bot
Comment 3 2015-11-18 05:25:27 PST
Comment on attachment 265743 [details] Patch Clearing flags on attachment: 265743 Committed r192574: <http://trac.webkit.org/changeset/192574>
WebKit Commit Bot
Comment 4 2015-11-18 05:25:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.