[Cairo] SolidStroke broken in drawLine after r191658 https://bugs.webkit.org/show_bug.cgi?id=151385

Patch by Alejandro G. Castro <alex@igalia.com> on 2015-11-18
Reviewed by Carlos Garcia Campos.

Fix the drawLine function after r191658, we have to make sure the
color is set when line is SolidStroke.

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::drawLine):

Canonical link: https://commits.webkit.org/169545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192574 268f45cc-cd09-0410-ab3c-d52691b4dbfc